# megahomyak.github.io

./: BLAHBLAHBLAH  Makerfile  README.txt  basics.txt  converter.py  deploy.sh  index  index.data  index.html  maker.sh  new_page_markup.xml  notes.txt  philification.html  phisnomification.html  pyproject.toml  styles  styles.data  things_to_get_off_my_head.md
about_this_blog/: index.data  index.html
bcte/: index.html  styles.css
images/: happy_face.description  human_hands_up.description  neutral_face.description  sad_face.description
input/: entry_point.nxml  entry_point.xml
maker/: Cargo.toml
maker/src/: context.rs  elements.rs  html.rs  main.rs
maker/src/special_types/: css_declaration_block.rs  existing_path.rs  filled_string.rs  html_attribute_name.rs  html_attributes.rs  html_class_name.rs  html_escaped_string.rs  html_tag_name.rs  identifier.rs  mod.rs  non_empty.rs  read_only.rs  slogan.rs  valid_article.rs
maker/src/traits/: from_xml.rs  (+2 more)
manager/: Cargo.toml
manager/src/: main.rs
parenting/: index.data  index.html
parenting/bad/: index.data  index.html
random_thoughts/: index.data  index.html
random_thoughts/on_vicious_cycles/: index.data  index.html
random_thoughts/why_being_silent_is_a_good_strategy/: index.data  index.html
random_thoughts/why_displaying_emotions_is_bad/: index.data  index.html
random_thoughts/why_every_human_is_selfish/: index.data  index.html
random_thoughts/why_schools_are_keeping_kids_from_learing/: index.data  index.html
sources/: about_myself.nxml  entry_point.nxml
styleguide/: index  index.html
(+1 files in other folders)
