[tool.poetry]
name = "megahomyak.github.io"
version = "0.1.0"
description = ""
authors = ["megahomyak <g.megahomyak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Markdown = "^3.4.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
